# swagger/v2/swagger.yaml
@@ -3084,9 +3084,9 @@ components:
       additionalProperties: false
     DicomOperation:
       enum:
-        - unknown
-        - reindex
         - export
+        - reindex
+        - unknown
         - update
       type: string
     DicomOperationIOperationState:
